# inline-web

./: requirements.txt  setup.cfg
src/inlineweb/: http.py  main.py
