[metadata]
name = inlineweb
version = 0.0.1
author = Joaquín Rossi
author_email = joaquin@joaquinrossi.net
license = AGPL-3.0-or-later
license_file = LICENSE
platform = linux, osx, unix, win32

[options]
packages =
    inlineweb
install_requires =
    requests
    beautifulsoup4
    python-magic
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    inline-web = inlineweb.main:main
